tests/cases/fail/unknown_base_type.cs
class Child : MissingBase {
    static void Main() {}
}
